--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
  <!DOCTYPE html>
     <html lang="pt-br">
     <head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<!-- Import links-->
         <!--=============== FAVICON ===============-->
         <link rel="shortcut icon" href="assets/img-ja-sport/ja_sport.svg" type="image/x-icon">
 
@@ -18,11 +19,6 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-
-
-
-
-
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -31,18 +27,13 @@
         />
         <link
           href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet"
-        />
+          rel="stylesheet"/>
         <link
-          href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"rel="stylesheet"
         />
         <link rel="stylesheet" href="globals.css" />
         <link rel="stylesheet" href="styles.css" />
-
-
-
-
+<!-- Fim Imports-->
         
         <title>Jp Store</title>
     </head>
